cmake_minimum_required (VERSION 3.1)
project (ghost_tutorial)

set( CMAKE_VERBOSE_MAKEFILE on )

# require a C++17-capable compiler
include(CheckCXXCompilerFlag)
CHECK_CXX_COMPILER_FLAG("-std=c++17" COMPILER_SUPPORTS_CXX17)
CHECK_CXX_COMPILER_FLAG("-std=c++1z" COMPILER_SUPPORTS_CXX1Z)
CHECK_CXX_COMPILER_FLAG("/std:c++17" COMPILER_SUPPORTS_CXX17_WIN)
if(COMPILER_SUPPORTS_CXX17)
  set(CMAKE_CXX_FLAGS "-std=c++17")
elseif(COMPILER_SUPPORTS_CXX1Z)
  set(CMAKE_CXX_FLAGS "-std=c++1z")
elseif(COMPILER_SUPPORTS_CXX17_WIN)
  set(CMAKE_CXX_FLAGS "/std:c++17")
else()
  message(STATUS "The compiler ${CMAKE_CXX_COMPILER} has no C++17 support. Please use a different C++ compiler.")
endif()

if(WIN32)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} /permissive-")
	INCLUDE_DIRECTORIES("C:/Program Files (x86)/ghost/include")
	link_directories("C:/Program Files (x86)/ghost/lib")
else()
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -Wextra -Wpedantic")
endif()	

if(APPLE)
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -isystem\ /usr/local/include")
endif()

if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
	set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -O0 -fsanitize=address,undefined,leak")
	set(CMAKE_EXE_FLAGS_DEBUG "-fsanitize=address,undefined,leak")
endif()

set(CMAKE_EXE_FLAGS "-DGHOST_BENCH -pthread")

## These two lines are the reason why we need CMake version 3.1.0+
set(THREADS_PREFER_PTHREAD_FLAG ON)
find_package(Threads REQUIRED)

# add the targets
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_CURRENT_SOURCE_DIR}/bin)

add_executable( tutorial_csp src/constraint_capacity.cpp src/constraint_at_least.cpp src/model_builder_sat.cpp src/main.cpp )
add_executable( tutorial_efsp src/constraint_capacity_ef.cpp src/constraint_at_least_ef.cpp src/model_builder_sat.cpp src/main.cpp )
add_executable( tutorial_cop src/constraint_capacity.cpp src/objective_max_value.cpp src/model_builder_opti.cpp src/main.cpp )
add_executable( tutorial_efop src/constraint_capacity_ef.cpp src/objective_max_value.cpp src/model_builder_opti.cpp src/main.cpp )

target_compile_definitions( tutorial_cop PUBLIC -DOPTIMIZATION )
target_compile_definitions( tutorial_efop PUBLIC -DOPTIMIZATION )

if(APPLE)
	if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
		target_link_libraries(tutorial_csp /usr/local/lib/libghost_staticd.a Threads::Threads)
		target_link_libraries(tutorial_cop /usr/local/lib/libghost_staticd.a Threads::Threads)
		target_link_libraries(tutorial_efsp /usr/local/lib/libghost_staticd.a Threads::Threads)
		target_link_libraries(tutorial_efop /usr/local/lib/libghost_staticd.a Threads::Threads)
	else()
		target_link_libraries(tutorial_csp /usr/local/lib/libghost_static.a Threads::Threads)
		target_link_libraries(tutorial_cop /usr/local/lib/libghost_static.a Threads::Threads)
		target_link_libraries(tutorial_efsp /usr/local/lib/libghost_static.a Threads::Threads)
		target_link_libraries(tutorial_efop /usr/local/lib/libghost_static.a Threads::Threads)
	endif()
else()	
	if("${CMAKE_BUILD_TYPE}" STREQUAL "Debug")
		target_link_libraries(tutorial_csp ghost Threads::Threads)
		target_link_libraries(tutorial_cop ghost Threads::Threads)
		target_link_libraries(tutorial_efsp ghost Threads::Threads)
		target_link_libraries(tutorial_efop ghost Threads::Threads)
	else()
		target_link_libraries(tutorial_csp ghost_static Threads::Threads)
		target_link_libraries(tutorial_cop ghost_static Threads::Threads)
		target_link_libraries(tutorial_efsp ghost_static Threads::Threads)
		target_link_libraries(tutorial_efop ghost_static Threads::Threads)
	endif()
endif()
